--- a/times.html
+++ b/times.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Washington Post</title>
+    <title>The Washington Post_Name changed</title>
     <link rel="icon" href="https://www.washingtonpost.com/favicon.svg">
 </head>
 
