--- a/times.html
+++ b/times.html
@@ -214,7 +214,7 @@
         <!-- FOOTER STARTS -->
         <tr>
             <td>
-                FOOTER
+                FOOTER UPDATED
             </td>
         </tr>
         <!-- FOOTER ENDS -->
